force-app/main/default/objects/Activity/fields/EconomicGroup__c.field-meta.xml
<CustomField>
    <fullName>EconomicGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grupo Econômico relacionado ao Pre-Lead</description>
    <label>Grupo Econômico</label>
    <referenceTo>EconomicGroup__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>