force-app/main/default/objects/Activity/fields/Empressa_Officer__c.field-meta.xml
<CustomField>
    <fullName>Empressa_Officer__c</fullName>
    <label>Empressa Officer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nottus</fullName>
            </value>
            <value>
                <fullName>Scooto</fullName>
            </value>
            <value>
                <fullName>Thymos Energia</fullName>
            </value>
            <value>
                <fullName>WiseByte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>