force-app/main/default/objects/Activity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Cadence</fullName>
                <label>Cadência</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>