force-app/main/default/objects/Activity/fields/TaskStagePreLead__c.field-meta.xml
<CustomField>
    <fullName>TaskStagePreLead__c</fullName>
    <label>Status do Pré Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>